
2001-10-11  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/userdir.py (doUserDirPost): fixed typo.

2001-10-10  Drew Csillag  <drew@starmedia.net>

	* SkunkWeb/Services/userdir.py(doUserDirPost): fix to function
	signature.  Had extra stuff.

2001-10-02  Drew Csillag  <drew@naxos.starmedia.net>

	* 3.1beta3 cut

2001-10-01  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/KickStart.py (CONFIG_STRING): added new imports into sw.conf
	environment.

	* SkunkWeb/Services/web/protocol.py (_cleanupConfig): cleanup hijinxs necessary for 
	dealing with UNIXPath.

	* pylibs/scopeable/_scope.c: Bizarrely dumb error in trim() repaired.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py (UNIXPath): added scope directive for sw.conf
	for unix sockets, rather maladroitly called UNIXPath.

	* SkunkWeb/Services/requestHandler/requestHandler.py (RequestHandler.__initPorts): 
	fixed bug that would appear if you left out the permissions of the unix socket from 
	sw.conf.

	* pylibs/SocketMan/SocketMan.py (SocketMan._run): added a more useful error trace.

	* SkunkWeb/SkunkWeb/constants.py (UNIXPATH): added constant for sessionDict key

	* SkunkWeb/Services/requestHandler/requestHandler.py (_beginSession): fix
	for unix sockets.

2001-10-01  Drew Csillag  <drew@starmedia.net>

	* SkunkWeb/sw.conf.in: added userdir config and defaultIndexHtml
	stuff

	* SkunkWeb/Services/templating/Handler.py: added functionality
	for defaultIndexHtml

	* docs/opman/opman.tex: added bit about defaultIndexHtml

	* pylibs/PyDO/doc, pylibs/PyDO/example: Added docs re: scatterFetch*

	* pylibs/PyDO/PyDO.py: moved scatterFetch* methods to static_ section

2001-09-29  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (end): essential fixes.

2001-09-26  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/httpd/protocol.py (jobGlob): some minor cleanup.

	* SkunkWeb/Services/web/protocol.py (_fixheader): some minor cleanup.
